fix: 运营分析优化及bug修复